--- a/templates/tabs/info.html
+++ b/templates/tabs/info.html
@@ -13,7 +13,10 @@
       <label class="label" style="margin-top:12px;">Plan</label>
       <input class="input" name="plan" value="{{ client.plan or '' }}">
 
-      <label class="label" style="margin-top:12px;">Sessions per week</label>
+      <label class="label" style="margin-top:12px;">Current sessions per week (from payments)</label>
+      <input class="input" value="{{ sessions_per_week or 0 }}" disabled>
+
+      <label class="label" style="margin-top:12px;">Fallback sessions per week (used if no payments exist)</label>
       <input class="input" type="number" name="weekly" min="0" value="{{ client.weekly_sessions or 0 }}">
 
       <button class="btn" type="submit" style="margin-top:14px;">Save Info</button>
